fixed flickering of edit modal

--- a/src/assets/scss/basic/_base.scss
+++ b/src/assets/scss/basic/_base.scss
@@ -1,22 +1,22 @@
 html {}
 
 body {
-
     margin: 0;
     padding: 0;
     font-family: open-sans;
-
-
 }
 
 * {
     box-sizing: border-box;
-
 }
 
 pre {
     font-family: unset;
     white-space: pre-wrap;
+
+    &:focus-visible{
+        outline: none;
+    }
 }
 
 h1,
@@ -31,10 +31,6 @@ pre {
 a {
     text-decoration: none;
     color: inherit;
-}
-
-pre {
-    font-family: unset;
 }
 
 /* FORM INPUTS */
