--- a/src/assets/scss/pages/_editor-page.scss
+++ b/src/assets/scss/pages/_editor-page.scss
@@ -68,9 +68,9 @@
         flex-direction: column;
         position: relative;
 
-        & *>:hover {
-            outline: 1px black dotted;
-        }
+        // & *>:hover {
+        //     outline: 1px black dotted;
+        // }
     }
 }
 
